--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banuba SDK Web AR demo</title>
+    <title>Farmatodo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body id="main-body"> 
     <div id="menu-scene" class="menu-scene">
         <div class="form-group pb-3">
             <img src="assets/images/boton.png" height="150" type="button" name="source" id="webcam" value="webcam" style="opacity: 0.5; pointer-events: none;">
@@ -18,17 +18,22 @@
         </div>
     </div>
 
+    <!-- <button id="screen-shot" style="position: absolute;">Captura</button> -->
+
     <div id="webcam-scene" class="webcam-scene hidden">
+        <div class="farmatodo">
+            <img src="assets/images/farmatodo.png">
+        </div>
         <div id="webar"></div>
         <div class="banner">
             <img src="assets/images/escoge-fondo.png">
         </div>
         <div class="miniaturas">
-            <img src="assets/images/fondo-2.jpg" height="60" width="100">
-            <img src="assets/images/fondo-2.jpg" height="60" width="100">
-            <img src="assets/images/fondo-2.jpg" height="60" width="100">
-            <img src="assets/images/fondo-2.jpg" height="60" width="100">
-            <img src="assets/images/fondo-2.jpg" height="60" width="100">
+            <img src="assets/images/back2.jpg">
+            <img src="assets/images/back2.jpg">
+            <img src="assets/images/back2.jpg">
+            <img src="assets/images/back2.jpg">
+            <img src="assets/images/back2.jpg">
         </div>
         
         <div class="logos">
